# project

./: CMakeLists.txt  DEADJOE  README.md  client  client.c  compCl.sh  compCl.sh~  compile.sh  compile.sh~  pts.sh  server  server.c  server.c~
include/: clientMW.h  parser.h  serverMW.h
include/include/: clientMW.h  parser.h  serverMW.h
src/: client.c  clientMW.c  parser.c  server.c  serverMW.c
src/src/: client.c  clientMW.c  parser.c  server.c  serverMW.c
